--- a/package.json
+++ b/package.json
@@ -11,14 +11,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.3",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.3",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/chart.js": "^2.9.41",
+    "angular-oauth2-oidc": "^17.0.2",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
+    "ngx-pagination": "^6.0.3",
+    "ngx-scrollbar": "^14.1.0",
     "rxjs": "~7.8.0",
+    "spotify-web-api-js": "^1.5.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
